apps/client/src/app/pages/gold-planner/gold-planner/gold-planner.component.less
.task-cell {
  text-align: left;
  line-height: 20px;

  .task-icon {
    width: 24px;
    height: 24px;
  }
}

.task-name {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.task-label {
  display: flex;
  flex-direction: column;
  margin-left: 3px;
}

.cell-container {
  width: 3000px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;

  > div {
    margin-left: 5px;
  }
}

.gold-checkbox-container {
  margin-top: 5px
}

.total-cell {
  font-size: 14px;
  font-weight: bold;
  background: #141414;
  border-top: 1px solid #666;
}

.total-row {
  position:sticky;
  bottom: 0;
  z-index: 3;
}

.gold-icon {
  width: 24px;
  height: 24px;
}

.header-link {
  font-weight: bold;
  text-decoration: underline;
  color: rgba(255, 255, 255, 0.85);
}

.warning {
  margin-bottom: 16px;
}

